[tool.poetry]
name = "breakout"
version = "0.1.0"
description = ""
authors = ["Noah Farr <login@noahfarr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pufferlib = { git = "https://github.com/PufferAI/PufferLib.git", branch = "dev" }
raylib = "^5.0.0.3"
torch = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
